# InitialSetSolver

./: .gitignore  CMakeLists.txt  README.md  build.sh  environment.yml
include/: AF.h  Algorithms.h  CadicalSatSolver.h  Encodings.h  IterableBitSet.h  Main.h  SCC.h
results/EE-IT/ee_it/: ee_it.yaml  raw.csv  status.json
results/EE-IT/ee_it/serialisation-solver/EE-IT/iccma23_complete/: BA_100_0_4_1.out  BA_100_60_1_1.out  BA_100_80_5_1.out  BA_100_90_1_1.out  BA_120_10_2_1.out  BA_120_20_1_1.out  BA_120_20_2_1.out  (+239 more)
results/EE-ITSCC/ee_it_scc/: ee_it_scc.yaml  raw.csv  status.json
results/EE-ITSCC/ee_it_scc_part2/: ee_it_scc_part2.yaml  raw.csv  status.json
results/EE-ITSCC/ee_it_scc_part3/: ee_it_scc_part3.yaml  raw.csv  status.json
results/EE-NIT/ee_nit/: ee_nit.yaml  raw.csv  status.json
results/EE-NIT/ee_nit_st_traffic/: ee_nit_st_traffic.yaml  raw.csv  status.json
results/EE-PROC/ee_proc/: ee_proc.yaml  raw.csv  status.json
results/EE-PROC/ee_proc2/: ee_proc2.yaml  raw.csv  status.json
results/EE-PROC/ee_proc_sembuster/: ee_proc_sembuster.yaml  raw.csv  status.json
results/csv_tables/: BA_table.csv  ER_table.csv  ICCMA23_table.csv  aba2af_table.csv  admbuster_table.csv  afgen_table.csv  crusti_table.csv  datalog_table.csv  gr_table.csv  planning2af_table.csv  scc_table.csv  sembuster_table.csv  st_table.csv  traffic_table.csv  ws_table.csv
src/: AF.cpp  CadicalSatSolver.cpp  CharacteristicFunction.cpp  ContainsADM.cpp  EE-IT-SCC.cpp  EE-IT.cpp  EE-ITSCC.cpp  EE-NON-IT.cpp  EE-PROC.cpp  Encodings.cpp  IsInitial.cpp  Parse.cpp  SCC.cpp  main.cpp
(+414 files in other folders)
